@@ -75,6 +75,25 @@ tcltest::test cookfsVfs-1.6 "Remounting archive using -fsindexobject" -setup {
     tcltest::removeFile $file
 } -returnCodes {ok} -result 1
 
+tcltest::test cookfsVfs-1.7 "Setting metadata on mount" -setup {
+    set file [tcltest::makeFile {} cookfs.cfs]
+} -body {
+    vfs::cookfs::Mount $file $file
+    set fh [open [file join $file testfile] w]
+    puts $fh TEST
+    close $fh
+    vfs::unmount $file
+
+    set h [vfs::cookfs::Mount $file $file -setmetadata {test1 1 test2 2}]
+    vfs::unmount $file
+
+    set h [vfs::cookfs::Mount $file $file -setmetadata {test1 1 test2 2}]
+    format %s,%s [$h getmetadata test1] [$h getmetadata test2]
+} -cleanup {
+    catch {vfs::unmount $file}
+    tcltest::removeFile $file
+} -returnCodes {ok} -result 1,2
+
 tcltest::test cookfsVfs-2.1 "Test compressing entire directory structure" -setup {
     set dir [tcltest::makeDirectory cookfs.vfs]
     set file [tcltest::makeFile {} cookfs.cfs]
